<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>

    <string name="app_name">AC Battery</string>

    <string name="how_to_use">How to use</string>
    <string name="note">Note</string>
    <string name="configuration">Configuration</string>
    <string name="on_battery">On battery</string>
    <string name="charging">Charging</string>
    <string name="about">About</string>

    <string name="hide_launch_icon">Hide launch icon (Maybe you need to reboot your Android)</string>

    <string name="how_to_use_text">AC Battery is a widget to show battery level.\n\nTo use this app, you need to add a "AC battery" widget to the home screen.</string>
    <string name="note_text">If the app is force stopped or killed by memory cleaner, the widget will not work properly.\n\nOpen the window can make the widget work properly again.\n\nClick the widget to open this windows and help the widget work properly again!\n\nIt is recommended to add the app to the white list of your memory cleaner.</string>
    <string name="about_text">Developer: &lt;a href=&quot;mailto:hipposeven332@gmail.com&quot;&gt;Hippo Seven&lt;/a&gt;&lt;br&gt;&lt;br&gt;Github: &lt;a href=&quot;https://github.com/seven332/AC-Battery&quot;&gt;https://github.com/seven332/AC-Battery&lt;/a&gt;&lt;br&gt;&lt;br&gt;The project is base on er-mo\'s &lt;a href=&quot;https://github.com/er-mo/Android-Battery-Widget&quot;&gt;Android-Battery-Widget&lt;/a&gt;&lt;br&gt;&lt;br&gt;AC niang emoji is owned by AcFun弹幕视频网</string>

    <string name="_default">Default</string>
    <string name="add">Add</string>

</resources>
