<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/keyline_margin"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/how_to_use"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/strip"/>

        </LinearLayout>

        <TextView
            android:id="@+id/how_to_use_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/keyline_margin"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="@string/how_to_use_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/note"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/strip"/>

        </LinearLayout>

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/keyline_margin"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="@string/note_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/configuration"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/strip"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/hide_launch_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_margin"
            android:paddingLeft="@dimen/keyline_margin"
            android:text="@string/hide_launch_icon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/on_battery"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/strip"/>

        </LinearLayout>

        <include
            android:id="@+id/on_battery_default"
            layout="@layout/item_battery"/>

        <LinearLayout
            android:id="@+id/on_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <include
            android:id="@+id/on_battery_add"
            layout="@layout/item_battery"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/charging"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/strip"/>

        </LinearLayout>

        <include
            android:id="@+id/charging_default"
            layout="@layout/item_battery"/>

        <LinearLayout
            android:id="@+id/charging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <include
            android:id="@+id/charging_add"
            layout="@layout/item_battery"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/about"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/strip"/>

        </LinearLayout>

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/keyline_margin"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</ScrollView>
